Add task bar and items
Problem:
We want to provide an imprint and privacy terms.

Solution:
Add new windows and the corresponding items in the task bar.

Also add a "Third party" section in the README.md to disclose the used
css resources. Add disclaimer, that this project has no connection
to Microsoft.

--- a/src/main/resources/META-INF/resources/css/main.css
+++ b/src/main/resources/META-INF/resources/css/main.css
@@ -1,7 +1,3 @@
-body {
-    background-color: #008080;
-}
-
 .center {
     margin: auto;
     width: 50%;
@@ -9,4 +5,24 @@ body {
 
 textarea {
     resize: none;
+}
+
+#imprint-window,
+#privacy-terms-window {
+    position: absolute;
+    z-index: 10;
+}
+
+#imprint-window {
+    top: 100px;
+    left: 50px;
+}
+
+#privacy-terms-window {
+    top: 75px;
+    right: 90px;
+}
+
+.hidden {
+    display: none;
 }
