--- a/src/main/resources/META-INF/resources/css/main.css
+++ b/src/main/resources/META-INF/resources/css/main.css
@@ -1,28 +1,49 @@
-.center {
-    margin: auto;
-    width: 50%;
-}
-
 textarea {
     resize: none;
+    /*font-family: "Arial", sans-serif;*/
 }
 
-#imprint-window,
-#privacy-terms-window {
+.notepad-window {
     position: absolute;
     z-index: 10;
+    width: 75%;
 }
 
-#imprint-window {
+.pict-window {
+    position: relative;
+    margin: auto;
+    width: 50%;
+    top: 25px;
+}
+
+.imprint-window {
     top: 100px;
     left: 50px;
 }
 
-#privacy-terms-window {
+.privacy-terms-window {
     top: 75px;
     right: 90px;
 }
 
 .hidden {
     display: none;
+}
+
+/*.maximize {
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 95%;
+}*/
+
+#cookie-info {
+    position: absolute;
+    bottom: 3.75rem;
+    right: 0;
+    z-index: 20;
+}
+
+#cookie-info .window-body {
+    font-weight: 700;
 }
