Add privacy terms
Problem:
If we want to publish the website, we need to provide privacy terms.

Solution:
Add privacy terms.

--- a/src/main/resources/META-INF/resources/css/main.css
+++ b/src/main/resources/META-INF/resources/css/main.css
@@ -42,6 +42,11 @@ textarea {
     right: 90px;
 }
 
+#privacy-terms-text {
+    font-family: "Courier", serif;
+    font-size: medium;
+}
+
 .hidden {
     display: none;
 }
